# safeselect

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PHASES.md  PLAN.md  README.md  SECURITY.md  build.rs  deny.toml  docker-compose.integration.yml  install.sh  uninstall.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: integration-tests.yml  prepare-release.yml  publish-package-managers.yml  release.yml  sync-main-to-develop.yml  verify.yml
Formula/: safeselect.rb
docs/: agents.md  distribution.md  install.md  security.md
packaging/asdf/: README.md
packaging/homebrew/: safeselect.rb
packaging/install/: install-release.sh
scripts/: test-real.sh
sidecar/: dependency-reduced-pom.xml  pom.xml
sidecar/src/main/java/com/safeselect/: Main.java
skills/: safeselect.md
src/: agents.rs  audit.rs  backend.rs  cli.rs  compass.rs  compose.rs  dbeaver.rs  diagnostics.rs  error.rs  main.rs  mcp.rs  security.rs  sidecar.rs
src/config/: driver.rs  environment.rs  mod.rs  project.rs
tests/: integration.rs  security.rs  smoke.rs  smoke_suite.rs
tests/security_suite/: mod.rs  real_mongodb.rs  real_postgres.rs  reconnect.rs  smoke.rs
tests/smoke_suite/: mod.rs  mongodb.rs  postgres.rs  reconnect.rs  smoke.rs
