[package]
name = "safeselect"
version = "0.1.0"
edition = "2021"
description = "MCP SQL Fail-Closed for AI Agents"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["blocking"] }
zip = "8"
similar = "2"
indoc = "2"


[profile.release]
strip = true
lto = true
codegen-units = 1
