[package]
name = "safeselect"
version = "0.2.0"
edition = "2021"
description = "MCP SQL Fail-Closed for AI Agents"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1.1.2"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
sha2 = "0.11.0"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13.4", features = ["blocking"] }
zip = "8.6.0"
similar = "3.1.1"
indoc = "2"
inquire = "0.9"
rpassword = "7"


[profile.release]
strip = true
lto = true
codegen-units = 1
